--- a/LunchTime_iOS/Storyboards/Xibs/EventDateAttendanceTableViewCell.xib
+++ b/LunchTime_iOS/Storyboards/Xibs/EventDateAttendanceTableViewCell.xib
@@ -12,14 +12,14 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="dateCell" rowHeight="82" id="KGk-i7-Jjw" customClass="EventDateAttendanceTableViewCell" customModule="LunchTime_iOS" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="426" height="82"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="82"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="426" height="81.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="81.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qtn-6m-obI">
-                        <rect key="frame" x="346" y="26" width="70" height="30"/>
+                        <rect key="frame" x="240" y="26" width="70" height="30"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="30" id="Otc-eT-AKC"/>
@@ -32,8 +32,8 @@
                             <action selector="noButtonPressed:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="NAJ-ol-upg"/>
                         </connections>
                     </button>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tuesday Dec 11, 8PM" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xvr-uP-cwd">
-                        <rect key="frame" x="15" y="26" width="241" height="30"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tuesday Dec 11, 12:30PM" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="xvr-uP-cwd">
+                        <rect key="frame" x="15" y="26" width="135" height="30"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="30" id="4ZY-Nn-Kne"/>
                         </constraints>
@@ -42,7 +42,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bI4-hc-UUS">
-                        <rect key="frame" x="271" y="26" width="70" height="30"/>
+                        <rect key="frame" x="165" y="26" width="70" height="30"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="30" id="1jL-j4-6SZ"/>
