--- a/LunchTime_iOS/Storyboards/Xibs/YelpLocationTableViewCell.xib
+++ b/LunchTime_iOS/Storyboards/Xibs/YelpLocationTableViewCell.xib
@@ -5,74 +5,68 @@
     </device>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="yelpCell" rowHeight="236" id="KGk-i7-Jjw" customClass="YelpLocationTableViewCell" customModule="LunchTime_iOS" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="120"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="yelpCell" rowHeight="579" id="KGk-i7-Jjw" customClass="YelpLocationTableViewCell" customModule="LunchTime_iOS" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="189"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="375" height="119.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="188.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="lJs-oE-OHH">
-                        <rect key="frame" x="5" y="5" width="110" height="110"/>
+                        <rect key="frame" x="5" y="44.5" width="100" height="100"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="110" id="4bi-vi-Mc6"/>
-                            <constraint firstAttribute="width" constant="110" id="uJQ-UK-Csx"/>
+                            <constraint firstAttribute="width" constant="100" id="GNQ-mD-7OM"/>
+                            <constraint firstAttribute="height" constant="100" id="xoe-Hb-uGP"/>
                         </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Business Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9FE-WI-6cb">
-                        <rect key="frame" x="130" y="16" width="235" height="20.5"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="16615 NW Oakridge dr, Portland " textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="84f-Pp-ZG7">
-                        <rect key="frame" x="130" y="51.5" width="235" height="17"/>
+                        <rect key="frame" x="115" y="95.5" width="195" height="17"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="jIz-WB-xlG">
-                        <rect key="frame" x="130" y="83.5" width="235" height="30"/>
-                        <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dM6-j9-Th8">
-                                <rect key="frame" x="0.0" y="0.0" width="112.5" height="30"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <state key="normal" title="Select"/>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jRs-gf-2D9">
-                                <rect key="frame" x="122.5" y="0.0" width="112.5" height="30"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <state key="normal" title="View in Yelp"/>
-                                <connections>
-                                    <action selector="viewInYelpButtonPressed:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="09j-og-7JX"/>
-                                </connections>
-                            </button>
-                        </subviews>
-                        <constraints>
-                            <constraint firstItem="dM6-j9-Th8" firstAttribute="width" secondItem="jRs-gf-2D9" secondAttribute="width" id="qAg-Kt-hS8"/>
-                        </constraints>
-                    </stackView>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dM6-j9-Th8">
+                        <rect key="frame" x="115" y="122.5" width="92.5" height="30"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <state key="normal" title="Select"/>
+                    </button>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jRs-gf-2D9">
+                        <rect key="frame" x="217.5" y="122.5" width="92.5" height="30"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <state key="normal" title="View in Yelp"/>
+                        <connections>
+                            <action selector="viewInYelpButtonPressed:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="09j-og-7JX"/>
+                        </connections>
+                    </button>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="BonChon Chicken - SunnyVale " textAlignment="center" lineBreakMode="wordWrap" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9FE-WI-6cb">
+                        <rect key="frame" x="115" y="44.5" width="195" height="41"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
                 <constraints>
+                    <constraint firstItem="dM6-j9-Th8" firstAttribute="width" secondItem="jRs-gf-2D9" secondAttribute="width" id="0Kn-yY-aKc"/>
                     <constraint firstAttribute="trailing" secondItem="9FE-WI-6cb" secondAttribute="trailing" constant="10" id="0px-r3-1df"/>
-                    <constraint firstItem="84f-Pp-ZG7" firstAttribute="top" secondItem="9FE-WI-6cb" secondAttribute="bottom" constant="15" id="3eV-jd-9vm"/>
-                    <constraint firstItem="9FE-WI-6cb" firstAttribute="leading" secondItem="lJs-oE-OHH" secondAttribute="trailing" constant="15" id="3k5-Nc-FyA"/>
-                    <constraint firstItem="lJs-oE-OHH" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="C83-v2-Umm"/>
-                    <constraint firstItem="84f-Pp-ZG7" firstAttribute="leading" secondItem="lJs-oE-OHH" secondAttribute="trailing" constant="15" id="HAC-cf-O25"/>
-                    <constraint firstItem="jIz-WB-xlG" firstAttribute="top" secondItem="84f-Pp-ZG7" secondAttribute="bottom" constant="15" id="NNn-6R-KPy"/>
-                    <constraint firstItem="9FE-WI-6cb" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="5" id="OcQ-uO-w0B"/>
-                    <constraint firstItem="jIz-WB-xlG" firstAttribute="leading" secondItem="lJs-oE-OHH" secondAttribute="trailing" constant="15" id="e66-ov-Pia"/>
+                    <constraint firstItem="9FE-WI-6cb" firstAttribute="leading" secondItem="lJs-oE-OHH" secondAttribute="trailing" constant="10" id="3k5-Nc-FyA"/>
+                    <constraint firstItem="84f-Pp-ZG7" firstAttribute="top" secondItem="9FE-WI-6cb" secondAttribute="bottom" constant="10" id="3xP-aX-L65"/>
+                    <constraint firstItem="dM6-j9-Th8" firstAttribute="top" secondItem="84f-Pp-ZG7" secondAttribute="bottom" constant="10" id="7iz-ft-qRY"/>
+                    <constraint firstItem="lJs-oE-OHH" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="BXQ-QJ-Q7X"/>
+                    <constraint firstItem="84f-Pp-ZG7" firstAttribute="leading" secondItem="lJs-oE-OHH" secondAttribute="trailing" constant="10" id="HAC-cf-O25"/>
+                    <constraint firstItem="9FE-WI-6cb" firstAttribute="top" secondItem="lJs-oE-OHH" secondAttribute="top" id="Lqa-co-ZZD"/>
+                    <constraint firstAttribute="trailing" secondItem="jRs-gf-2D9" secondAttribute="trailing" constant="10" id="VD9-kE-vs5"/>
+                    <constraint firstItem="jRs-gf-2D9" firstAttribute="leading" secondItem="dM6-j9-Th8" secondAttribute="trailing" constant="10" id="Xld-rl-tiM"/>
+                    <constraint firstItem="jRs-gf-2D9" firstAttribute="top" secondItem="84f-Pp-ZG7" secondAttribute="bottom" constant="10" id="Yzj-sH-Ij9"/>
                     <constraint firstAttribute="trailing" secondItem="84f-Pp-ZG7" secondAttribute="trailing" constant="10" id="eoM-HB-SbC"/>
-                    <constraint firstAttribute="trailing" secondItem="jIz-WB-xlG" secondAttribute="trailing" constant="10" id="m23-Ra-cAJ"/>
+                    <constraint firstItem="dM6-j9-Th8" firstAttribute="leading" secondItem="lJs-oE-OHH" secondAttribute="trailing" constant="10" id="ibV-db-d6o"/>
                     <constraint firstItem="lJs-oE-OHH" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="5" id="r8H-sf-Tv9"/>
                 </constraints>
             </tableViewCellContentView>
@@ -84,7 +78,7 @@
                 <outlet property="yelpBusinessImage" destination="lJs-oE-OHH" id="dzB-mp-h5Z"/>
                 <outlet property="yelpBusinessName" destination="9FE-WI-6cb" id="pIj-tc-9pO"/>
             </connections>
-            <point key="canvasLocation" x="-47.5" y="23.5"/>
+            <point key="canvasLocation" x="152" y="283.5"/>
         </tableViewCell>
     </objects>
 </document>
